replace Collectors.toList with Stream.toList (#184)